[DevTools] Fix isolated world crash by always adding a SecurityOrigin

Bug: 879219
Change-Id: I6cf01b36326a8b7727a870f2f7e2d061774d1c5b
Reviewed-on: https://chromium-review.googlesource.com/1226797
Reviewed-by: Dmitry Gozman <dgozman@chromium.org>
Commit-Queue: Joey Arhar <jarhar@chromium.org>
Cr-Commit-Position: refs/heads/master@{#592888}